# revelation-server

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.migrate  REUSE.toml  SECURITY.md
.github/workflows/: ci.yml
.reuse/: dep5
.sqlx/: query-0289e847c2c81bc57dbff31027c49d23cc4ff2cfe2d77aa9e7e9a1381e48ab42.json  query-09e80fc9edfd6f2d3d28420450f8b902bd1d4eb9547dbab882220074e62c94c9.json  query-110479349bbc3e8ab0b3f73c14309cf69e211910401e5adcf3c5c236e9accd51.json  query-191d194bfe23e278b086435b465d554618f1ad3acfb30a7ffa5479eb87393e30.json  query-212deb5dae6e7449b1dd061bb032e7354cac6cec68b2cc79f5846c114d37aa4e.json  query-22ce4f8975657509a011b49b342c75bc688334ffea8eba8655a9f1d2e89375f6.json  query-2ac6368ae63bbd134584c2921ca6a15a09256730e4639c3b70138e56efb3dfc2.json  query-2fe3c67497f29bb445cc0aa3d7779898c28f46e9de5fb15f2f61948a306428cc.json  query-2ffaac1f7e0f8d3540a25a77748eba36c98969ef05f42ed4768860b6f3cb4f00.json  query-3b3e5b338e02f0b90e626f22e9172eeae8f95a47d2cc57d59ab64711f92eccf8.json  query-3fcab7a4b6a8fcc1d66f4df6da9b54250181345047a5a449e0dcd8ddd521000b.json  query-452944813a4d7c940ad739257cff99a2f7a3a64c864c8cd3b9988df3c837c994.json  query-461e95e5294b39770a4e5eff8122abaf4bd1b9fe23c5848d9037df031ae00820.json  query-4da4f8da0dd3684965cd100f1735532c25097df368043c3825a6c86623e4e70f.json  query-550c4d60c404896f2024bd221d794955a28c48c219cae015e0c60dab928550c1.json  query-58200fe791d4ce8493aac5a21361fca62c95cb2e9d768cfcd8fdc4291e2f7d2d.json  query-5cb3f01d2c4427a2dac4ab48da0c9ced62e29392e25e96add059b250b0243e4f.json  query-6494a2d3d15f46f1f21421ea84df69336db17f09af3be15acea59a0531774b40.json  query-6ca00a529a48a9ceb051310532e1ff1fbefd29d5954a4e5136991e50f1007af3.json  query-701df9e7294793c11dae2792430ba39aad4bdea58683c96f5fdbbf0f19a59c04.json  query-725de9adca84d2a0f67ccd3fd8cc2102bb54b1a162f080c638ab7a498be707b5.json  query-77ff62c9c790817a1461f52d0376f73218f14bef40a69579a929f5bf31ab19bb.json  query-7b07c91dbb00f555cb026a8112c17d8278532efe36c49e16a29f209d22a53205.json  query-7beba544a30466da34da2d70f1358eb1532eeff36144423780e925e41bb137e2.json  query-7d2fdddddc737de6c62c37a6c096eb43a727499d01c607391c8d255c84bd6e60.json  query-8098503863cb3ce55dbc83dd2154d4067a4ee3928eef8f3238cf3bd2b8051383.json  query-85df1295bef34b079218260d80070dfb9f13cfd2be0973acd5d0424c1d6287a9.json  query-923172e1888ec1ac9db1dc5ce445b8c8ee45013280c5afa56928171051656157.json  query-9415665b262851a687857ca2f8a6c98adeecd93bb1fadab1fdf1de58064e38cc.json  query-969839da0a0ce3dd480afae27477e540e500e78f40c4f4115d46aa6d419729a3.json  query-969839da0a0ce3dd480afae27477e540e500e78f40c4f4115d46aa6d419729a3.json.license  query-a26102bf0d8bc82db3eb32dc828913da55eb8df2a459ff12abb65f8bf13d937d.json  query-a650f5a4b76222c721df8bb614de4403a2b41333e727bcf7e1a0513d6c9ac8d9.json  query-a7f0b65ce3c911da7dd69988b95b6859e1b5fae42f2d4436ce386c278e7ba115.json  query-b2634083e5c8646218eca4daf774c9c6001c2d2406b38a6717fdd879d734c167.json  query-bb126381d337d23d03232d7d02ce1373d11b0c073a888c8cc09092d22fc2116a.json  query-c32f175bf382560d7a54eaf2fd9da58bc0888431e1e7bbbac634f17f5fd4a23e.json  query-ca6b9580f0f1d6b181a1d0fb8a7b74a5cf21ae8744fdb4ba40fb3ef8d50353da.json  query-cec6eeeaaa966584ee3782a8aba7cfa2a6880eefd30af06d3982b33adf14c062.json  query-cf893f1e0cc5471e549aa5f4b93cfbfc0f89e39fc67407b1150703d1ebff3d6d.json  (+17 more)
k8s/: deployment.yaml  migrate-job.yaml  service.yaml
migrations/: 001_initial.sql  002_pericopes.sql  003_songbook.sql  004_seed_songs.sql  005_songbook_metadata.sql  006_songs_has_chords.sql  007_fix_songbook_trigger.sql  008_cross_refs_weight.sql
src/: adapters.rs  config.rs  domain.rs  handlers.rs  lib.rs  loader.rs  main.rs  middleware.rs  services.rs  state.rs
src/adapters/: postgres.rs
src/adapters/postgres/: bible.rs  mod.rs  notification.rs
src/db/: mod.rs
src/domain/: bible.rs  mod.rs
src/domain/bible/: bookmark.rs  highlight.rs  mod.rs  note.rs  reading_progress.rs
src/handlers/: bible.rs  churches.rs  feed.rs  health.rs  mod.rs  songs.rs  users.rs
src/middleware/: mod.rs
src/services/: bible.rs  mod.rs  notification.rs  songbook.rs
(+16 files in other folders)
