# SPDX-FileCopyrightText: 2025-2026 Revelation Team
#
# SPDX-License-Identifier: MIT

[package]
name = "revelation-server"
version = "0.2.1"
edition = "2024"

[features]
default = ["api", "validate", "postgres"]
api = []
validate = []
postgres = []

[lib]
name = "revelation_server"
path = "src/lib.rs"

[[bin]]
name = "revelation-server"
path = "src/main.rs"

[[bin]]
name = "bible-cli"
path = "src/bin/bible_cli.rs"

[dependencies]
revelation-bible = { version = "0.2", features = ["db", "backend", "api"] }
revelation-songbook = { version = "0.1", features = ["db", "backend", "api"] }
revelation-user = { version = "0.1", features = ["postgres", "axum", "api"] }
revelation-church = { version = "0.1", features = ["db"] }
revelation-post = { version = "0.1", features = ["db"] }
revelation-religion = { version = "0.1", features = ["db"] }

axum = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-gzip",
] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
masterror = { version = "0.27", features = [
  "axum",
  "sqlx",
  "validator",
  "tracing",
  "openapi",
] }
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5", features = ["uuid", "chrono", "axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
entity-derive = "0.2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "10"
